# autobuild

./: .gitignore  Cargo.toml  LICENSE  README.md  autobuild.toml  autobuild.toml.example  bootstrap  build.rs  clippy.toml
.github/ISSUE_TEMPLATE/: guess-target.yml
bootstrap/: rust-project.json
docs/: book.toml
docs/src/: SUMMARY.md
docs/src/cli/: tools.md
src/: config.rs  consts.rs  hash.rs  helpers.rs  install.rs  jobserv.rs  log.rs  main.rs  map.rs  os.rs  programs.rs  rand.rs  serialize.rs  set.rs  targ.rs  tools.rs
src/config/: script.rs  store.rs
src/config/script/: default.rs
src/hash/: sha.rs
src/install/: store.rs
src/jobserv/: unix.rs  windows.rs
src/map/: de.rs  raw.rs
src/programs/: rustc.rs
src/programs/rustc/: store.rs
src/serialize/: helpers.rs  val.rs
src/serialize/val/: de_owned.rs  map.rs  ser_owned.rs  serde_val.rs
src/set/: de.rs
src/targ/: guess.data  guess.rs
src/targ/guess/: uname.rs  x86.rs
src/tools/: clean.rs  config.rs  guess.rs  install.rs  rustc.rs  uname.rs  which.rs
